工薪族笔记完结

--- a/gongxinzu/工薪族财务自由说明书4.md
+++ b/gongxinzu/工薪族财务自由说明书4.md
@@ -1,21 +1,112 @@
 ## 第四章 如何买保险
 
+保险和投资同样作为金融工具，其实有很多互补或者相互替代的部分，只考虑保险，很容易导致保障低效和资源浪费。
 
+保险的原理是把大家的保费收集起来，一方面进行投资增值，另一方面当被保人出险的时候再从资金池内提取资金来提供保障。作为一个懂投资的人，很多时候大可自己进行投资来增强自己的抗风险能力，而不用过度依赖保险公司。
+
+![image1](https://i.loli.net/2021/03/05/EXv94iewA8yWah3.png)
+
+如图所示，保险的价值最高点在起始点，由于通货膨胀的原因价值不断下降。而投资的价值变化和保险正相反，投资的早期价值很低，本金少，基本起不到什么作用，但是投资越到后期价值越高，复利累积效应越来越明显。
+
+保险关注中短期，投资关注长期。不能指望保险能够解决长期尤其是终身问题，也别想着刚刚开始投资就能马上产生稳定的被动收入。
+
+#### 为什么保险要早买？
+
+- 早买保险是个两头赚钱的好事。
+- 保险越早买越便宜，真生病以后很可能就买不了保险了。
+- 早期投资价值还没有涨起来，处在一个非常脆弱的时期。在投资理财的早期，保险可以有效保护投资本金，保险早买价值越大。
+
+#### 保险是消费不是投资
+
+保险并不是投资，增加抗风险能力的同时也在增加负担。
+
+关于保险策略最恰当的比喻，我认为是——头盔+防弹背心。保险就好比防护工具，没有防护工具就上战场等于自取灭亡。但问题是防护工具也不能穿太多，否则就失去了灵活性，反倒更容易被歼灭。
+
+所以：**`保险只买刚需，刚需买到最佳，其他的不要买`**。
 
 ### 四大刚需保险的作用
 
+除了五险一金的社保以外，我们一般还需要四大类刚需保险。
 
+四大刚需保险是指：
+- 医疗险
+- 重疾险
+- 意外险
+- 寿险
+
+#### 医疗险
+
+医疗险保障的主要是出现重大疾病时分担沉重的医疗费和住院费负担。
+
+#### 重疾险
+
+重疾险保障的主要是出现重大疾病导致失去工作能力时，补偿收入缺口，本质上是生活费，而不是医药费。
+
+#### 意外险
+
+意外险保障的情况稍微复杂，因为意外导致的问题可大可小，主要就是意外事故导致的对应开支。
+
+#### 寿险
+
+寿险，主要为定期寿险，主要保障的是对家庭一方因疾病或意外身故导致的收入缺口进行补偿。
+
+从保险的刚需程度来说，我建议的配置顺序是：**医疗险、重疾险、寿险、意外险**。
 
 ### 不同险种能不能互相替代
 
+如果一类保险可以完全覆盖另一类保险所承担的风险，或者满足了自己的全部保险需求，就可以考虑相互替代，否则就不行。
 
+#### 医疗险不能代替重疾险
 
-### 保险的保障期限买多久最划算
+医疗险：
+- 最大的优势是杠杆足够高，几百元的保费能够得到上百万元的保障。
+- 医疗险像社保一样实报实销，只理赔医疗费，花多少医疗费就对应理赔多少。
 
+但生病期间所需要负担的不仅仅是医疗费，更重要的是如果生大病，这段时间不能工作就会产生很大的收入缺口。这部分缺口是没有办法使用医疗险来弥补的。只能用重疾险来弥补。
 
+重疾险
+- 生病以后直接给你一笔钱（保额），可以自行选择资金用途
+- 重疾险的最大用途——补偿生病期间的收入缺口
+
+#### 重疾险不能代替医疗险
+
+产生医疗费的情况可能多种多样，比如意外事故需要住院或者手术，不是重疾险中所约定的重疾，这些费用无法得到赔付。
+
+更关键的是，用重疾险去覆盖医疗费是非常不明智、不划算的。因为重疾险的杠杆倍率比医疗险低太多了。重疾险 50 万元保额，一年保费要几千元到一万元，而医疗险 400 万元的保额，保费往往只有重疾险的 1/10。
+
+总体来说，医疗险和重疾险的分工是很明确的：
+- 医疗险管生病期间的医疗费
+- 重疾险则相当于生病期间的误工费，补偿收入
+
+重疾险的理想保额是高于当前的总负债和两三年生活开支。
 
 ### 容易被忽视的寿险
 
+因为寿险和身故相关，导致大家对于寿险比较避讳。很多人会买齐医疗险、重疾险和意外险，但是唯独没有寿险，但是我个人认为寿险比意外险更重要。
 
+寿险和意外险都属于典型的高杠杆，保额高、保费低。其中意外险的杠杆尤其高，同样的保额比定期寿险便宜不少。所以不少人只给自己买了意外险，没有配置寿险。但是身故理赔数据中，疾病所致占比 80%，意外所致只占 20%，所以如果真的看重保障，建议先配置寿险，有需要再配置意外险作为补充。
+
+以下几类家庭是尤其不应该忽视寿险的：
+- 固定开销比较大的
+- 家庭收入来源比较单一，一方为家庭支柱
+- 有房贷等负债的家庭
+
+除此以外，还有一个虽然和保险没有直接关系，却能大幅度提升家庭抗风险能力的习惯——`多和家人沟通家庭财务状况`。
 
 ### 关于保险的几个使用原则
+
+#### 保险归保险，投资归投资
+
+不建议买返还型保险或者其他投资属性很重的保险。这类保险往往保额很低、保费却很高，最后既不能实现有效保障，也不能提供可观的投资回报。
+
+#### 理性考虑保障期限
+
+终身保障看起来非常可靠，但是由于通货膨胀的影响很可能并不能实现保终身，还是需要具体计算。如果能够做好规划，一部分钱买定期保险，一部分钱用来投资理财其实能得到更好的终身保障。
+
+#### 尽可能拉长缴费年限
+
+这样来自现金流的压力会小很多，也可以早期快快开始积累自己的投资本金。
+
+#### 认真阅读保险条款
+
+保险是典型的强监管产品，不存在公司跑路的情况，但是有很多潜在限制条款，而我们对于某一个保险产品的第一印象很可能和其条款是有所区别的。有些意外情况可能是不被承保的，比如很多意外险产品就不保猝死，如果没有事先好好了解保险条款，很容易产生“保障幻觉”，以为自己已经得到了很好的保障，结果真到出险的时候后悔莫及。
