修正前三月支出

--- a/expense/2021-fab.md
+++ b/expense/2021-fab.md
@@ -1,12 +1,6 @@
 # 2021.02 开支情况
 
-照旧放一下预算便于对比：
-
-![2021 预算](images/2021-plan.png)
-
----
-
-![Fab](images/2021-fab.jpeg)
+![Fab](images/2021-fab.png)
 
 说明：
 
@@ -16,10 +10,10 @@
 - 交通部分是因为学车产生了很多支出，下个月应该会减少
 - 日用品部分还算正常，买了一个电饭锅稍微大笔一些，以后买东西可以多在1688上看看，之前的床上四件套就比双十二还便宜
 - 人情部分是捐款，这个属于临时开支，也不可预测
-- 恋爱部分是给小萌去看电影
+- 恋爱部分是给小萌去看电影、存的两个人的见面基金
 
-理论上二月的预算是 5500 - 2600 = 2900，实际支出 4622，超支 `1722.07`，一月份预算结余 `72.89`，总超支是 `1649.18`，摊到之后的 10 个月，每月是 165。
+理论上二月的预算是 5500 - 2600 = 2900，实际支出 6310.07，超支 `3410.07`，一月份预算结余 `72.89`，总超支是 `3337.18`，摊到之后的 10 个月，每月是 333.72。
 
 所以下个月的支出总预算是：
 
-> 5500 + 2600 - 165 = 7935
+> 5500 + 2600 - 333.72 = 7766.28
