--- a/expense/2021-jan.md
+++ b/expense/2021-jan.md
@@ -13,8 +13,9 @@
 新的一年预算 66000，每个月为 5500 元。如果顺利的话，可以节约两万多的支出。
 
 ---
+一月份的开支情况如下：
 
-![Jan](images/2021-jan.jpeg)
+![Jan](images/2021-jan.png)
 
 说明：
 
