调整文章格式

--- a/posts/2021/2021-12-31.md
+++ b/posts/2021/2021-12-31.md
@@ -57,11 +57,11 @@
 - 诸葛稳健
 - 螺丝钉指数基金组合
 
-长赢和有知有行的投资思路是比较类似的，核心是【好资产+好价格=好收益】，把资金分成一份一份，低估时买入，高估时卖出。这种对跟车是很友好的，可以中途厂车，只买其中几个品种，错过一些车，也可以在不超过主理人持有净值的情况下进行追车。稳健投资的几个基金组合都很不错，拿着很安心。
+长赢和有知有行的投资思路是比较类似的，核心是「好资产+好价格 = 好收益」，把资金分成一份一份，低估时买入，高估时卖出。这种对跟车是很友好的，可以中途厂车，只买其中几个品种，错过一些车，也可以在不超过主理人持有净值的情况下进行追车。稳健投资的几个基金组合都很不错，拿着很安心。
 
-云长和诸葛，这一年拿的比较闹心，没有很亮眼的成绩（跟上车时机也有关系，买在了高点），并且云长的波动性真的蛮大的，而且很多基金都是风格变了开始割肉卖出，云长至今已经割肉了400多元，这个让我很难受。
+云长和诸葛，这一年拿的比较闹心，没有很亮眼的成绩（跟上车时机也有关系，买在了高点），并且云长的波动性真的蛮大的，而且很多基金都是风格变了开始割肉卖出，云长至今已经割肉了 400 多元，这个让我很难受。
 
-螺丝钉的投资逻辑其实也是蛮不错的，总的来说是走的低估买入、中估持有、高估卖出这个路线，不过有个让人很不爽的是，这个组合感觉是一开始跟车就很难停下来的那种，不然就不能跟着主理人摊平成本，自己的收益和组合收益根本对不上，而且它是每周固定发车，需要不断投入现金，比较消耗现金流。另外感觉择时也不是准确，以中概股为例，感觉买早了，等他这边买入跌了25%左右，有知有行黑板报才开始出手买入。
+螺丝钉的投资逻辑其实也是蛮不错的，总的来说是走的低估买入、中估持有、高估卖出这个路线，不过有个让人很不爽的是，这个组合感觉是一开始跟车就很难停下来的那种，不然就不能跟着主理人摊平成本，自己的收益和组合收益根本对不上，而且它是每周固定发车，需要不断投入现金，比较消耗现金流。另外感觉择时也不是准确，以中概股为例，感觉买早了，等他这边买入跌了 25% 左右，有知有行黑板报才开始出手买入。
 
 ### 2022 年的投资计划
 
